fixed how the base of the header looks on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -134,23 +134,26 @@ ol li {
         font-family: 'Bebas Neue', Arial, sans-serif;
         padding: 10px;
     }
+    menu li:hover {
+        background-color: #EB5428;
+        transition: all 0.3s ease-in-out;
+    }
     menu li a {
         text-decoration: none;
         color: #EB5428;
         font-size: 20px;
         text-align: center;
-    }
-
-    
+    }    
 
     /* Main Navigation */
     header label {
         cursor: pointer;
         display: inline-block;
         padding: 28px 20px;
-        position: relative;
+        position: absolute;
         user-select: none;
         padding: 20px;
+        height: 32px;
     }    
     header label span:before {
         top: 5px;
@@ -195,10 +198,10 @@ ol li {
     }
     menu {
         overflow: visible;
-        position:relative;
+        position: relative;
         top: 0;
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+        grid-template-columns: 1fr;
     }
     menu li, menu a {
         grid-column: 2 / 2;
@@ -217,8 +220,9 @@ ol li {
     /* header menu - first list item and SVG */
     li#home-icon {
         background-color: #EB5428;
-        position: absolute;
+        position:relative;
         grid-column: 2 / 3;
+        margin-top: -20px;
     }
     li#home-icon a {
         color: white;
@@ -228,12 +232,12 @@ ol li {
     li#last {
         position: absolute;
         grid-column: 3 / 4;
-        top: 0px;
-        left: 0px;
+        top: -20px;
+        left: 20px;
     }
     li#last a {
         color: black;
-        display: block;
+        display: fixed;
         grid-column: 3 / 4;
     }
     li#last a:hover {
